# mac-img-viewer

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: contextmenu.js  contextmenu.ts  ipc.js  ipc.ts  keys.js  keys.ts  main.js  main.ts  state.js  state.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  main.rs  model.rs  scan.rs  settings.rs  thumbs.rs
src/grid/: grid.js  grid.ts  thumbqueue.js  thumbqueue.ts  typeahead.js  typeahead.ts
src/viewer/: viewer.js  viewer.ts  zoom.js  zoom.ts
